grammar.js
    source_file: $ => seq(repeat($._line), optional($.statement), optional($._error_token_forms)),

    _line: $ => choice(seq($.statement, $._line_end), $._line_end),

    // A line ends with a terminator; during error recovery also with a
    // recovery line break, valid only here, in `_try_line` and after the
    // header of a loop, function, TRY, CATCH or directive (`_body_start`),
    // not after an IF header and not inside brackets (ADR-0008).
    _terminator: $ => choice($._newline, ':'),
    _newline: _ => /\r?\n/,

    // BS-LEX-012–014: `'` or whole-word REM, to the end of the line. Declared
    // before `identifier`: for exactly `rem` both tokens match three characters
    // and the earlier token wins (REM mechanism 1, grammar-design §3).
    comment: _ => token(choice(
      /'[^\r\n]*/,
      /[rR][eE][mM]([ \t][^\r\n]*)?/,
    )),

    // BS-STMT-035: a block starts with the terminator that ends its header.
    block: $ => choice($._terminator, seq($._block_head, repeat($._line))),

    // The terminator and the first line as one parse-stack entry of an open
    // block, which bounds the end-of-input work on deeply nested unclosed
    // blocks (S07-M01, grammar-design §7).
    _block_head: $ => seq($._terminator, choice(seq($.statement, $._line_end), $._line_end)),

    // The body of a loop, function, CATCH or directive: after a malformed header, recovery may
    // also end the header at a recovery line break (ADR-0008). An IF body may not,
    // or a single-line IF with an error would become a block IF.
    _body: $ => choice($._body_start, seq($._body_head, repeat($._line))),

    _assignment_target: $ => choice(
      $.identifier,
      alias($._stmt_member, $.member_expression),
      alias($._stmt_index, $.index_expression),
    ),

    // BS-STMT-001, 002, BS-EXP-020: `=` here is assignment; inside an
    // expression it is comparison.
    assignment_statement: $ => seq(
      field('left', $._assignment_target),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '\\=', '<<=', '>>=')),
      field('right', $.expression),
    ),

    // BS-STMT-003, 004.
    update_statement: $ => seq(
      field('operand', $._assignment_target),
      field('operator', choice('++', '--')),
    ),

    // BS-STMT-007-011, BS-LEX-032 (grammar-design §6): after the condition and
    // optional THEN, a terminator (or a comment before it) selects the block
    // form and a statement start selects the single-line form.
    if_statement: $ => choice($._block_if, $._single_line_if),

    _block_if: $ => seq(
      kw('if'),
      field('condition', $.expression),
      optional(kw('then')),
      field('consequence', $.block),
      repeat(field('alternative', $.else_if_clause)),
      optional(field('alternative', $.else_clause)),
      choice(endKw('if'), kw('endif')),
    ),

    else_if_clause: $ => seq(
      choice(seq(kw('else'), kw('if')), kw('elseif')),
      field('condition', $.expression),
      optional(kw('then')),
      field('consequence', $.block),
    ),

    else_clause: $ => seq(kw('else'), field('body', $.block)),

    // Right precedence: `:` and ELSE continue the innermost single-line IF.
    _single_line_if: $ => prec.right(PREC.LIST, seq(
      kw('if'),
      field('condition', $.expression),
      optional(kw('then')),
      field('consequence', alias($._inline_block, $.block)),
      optional(field('alternative', alias($._inline_else, $.else_clause))),
    )),

    exit_statement: $ => choice(seq(kw('exit'), choice(kw('for'), kw('while'))), kw('exitwhile')),

    continue_statement: $ => seq(kw('continue'), choice(kw('for'), kw('while'))),

    // BS-STMT-023.
    return_statement: $ => seq(kw('return'), optional(field('value', $.expression))),

    // BS-STMT-024-026, 039, BS-LEX-031, 035: an item extends as far as the
    // expression grammar allows (LIST precedence is below every operator).
    print_statement: $ => seq(choice(kw('print'), '?'), optional($._print_items)),

    // Four-item groups reduce hidden repetition nodes and deletion allocations.
    // Every positive item count is 4k + r, r in 1..4; public items stay unchanged.
    // The error-recovery scanner bounds malformed runs (B4-01, ADR-0008).
    // Items name expression kinds directly, without an `expression` wrapper.
    _print_items: $ => seq(
      repeat(seq($._print_item, $._print_item, $._print_item, $._print_item)),
      choice(
        $._print_item,
        seq($._print_item, $._print_item),
        seq($._print_item, $._print_item, $._print_item),
        seq($._print_item, $._print_item, $._print_item, $._print_item),
      ),
    ),

    dim_statement: $ => seq(
      kw('dim'),
      field('name', $.identifier),
      choice(
        seq(alias($.open_bracket, '['), commaSep1(field('dimension', $.expression)), ']'),
        seq(alias($.open_parenthesis, '('), commaSep1(field('dimension', $.expression)), ')'),
      ),
    ),

    // BS-STMT-027, BS-LEX-027, 028: a label is a whole statement.
    goto_statement: $ => seq(kw('goto'), field('label', $.identifier)),

    end_statement: _ => kw('end'),

    stop_statement: _ => kw('stop'),

    // BS-STMT-031, 032.
    _postfix_operand: $ => prec(PREC.POSTFIX, choice(
      $.identifier,
      $.parenthesized_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.attribute_expression,
    )),

    // BS-EXP-002.
    parenthesized_expression: $ => seq(alias($.open_parenthesis, '('), $.expression, ')'),

    // BS-EXP-003-007, 021: one postfix level applied left to right; the
    // optional forms share the node types (BS-LEX-029).
    call_expression: $ => choice(
      prec(PREC.POSTFIX, seq(
        field('function', $._callee),
        field('arguments', $.argument_list),
      )),
      // A called member (`a.b(1)`, `a?.b(1)`): the called name and the
      // argument list are siblings, which keeps queries on chains linear (S07-M03).
      prec(PREC.METHOD, seq(
        field('object', choice($._postfix_operand, $.number, $.string)),
        choice('.', '?.'),
        field('property', $.identifier),
        field('arguments', $.argument_list),
      )),
    ),

    _callee: $ => prec(PREC.POSTFIX, choice(
      $.identifier,
      $.parenthesized_expression,
      $.call_expression,
      $.index_expression,
      $.attribute_expression,
    )),

    argument_list: $ => seq(choice(alias($.open_parenthesis, '('), '?('), commaSep($.expression), ')'),

    member_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', choice($._postfix_operand, $.number, $.string)),
      choice('.', '?.'),
      field('property', $.identifier),
    )),

    index_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._postfix_operand),
      choice(alias($.open_bracket, '['), '?['),
      commaSep1(field('index', $.expression)),
      ']',
    )),

    attribute_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._postfix_operand),
      choice('@', '?@'),
      field('attribute', $.identifier),
    )),

    // BS-EXP-012, 018, 027, BS-LIT-004: a prefix operator binds its operand at
    // its own level, also as the right operand of a tighter operator.
    _pow_left: $ => prec(PREC.POSTFIX, $.expression),

    // BS-EXP-011, 013-017, 019, 020.
    binary_expression: $ => choice(
      prec.right(PREC.EXPONENT, seq(
        field('left', $._pow_left), field('operator', '^'), field('right', $.expression),
      )),
      ...[
        [PREC.MULTIPLICATIVE, choice('*', '/', kw('mod'), '\\')],
        [PREC.ADDITIVE, choice(alias($.plus_sign, '+'), alias($.minus_sign, '-'))],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.COMPARE, choice('=', '<>', '<', '>', '<=', '>=')],
        [PREC.AND, kw('and')],
        [PREC.OR, kw('or')],
      ].map(([p, operator]) => prec.left(p, seq(
        field('left', $.expression), field('operator', operator), field('right', $.expression),
      ))),
    ),

    // ------------------------------------------------ collections (§9)
    // BS-ARRAY-001-003: line breaks after `[`, between elements (with or
    // without commas) and before `]`; a trailing separator is tolerated.
    associative_array_literal: $ => seq(
      '{',
      repeat($._newline),
      optional(seq(
        $.associative_array_entry,
        repeat(seq($._sep, $.associative_array_entry)),
        optional($._sep),
      )),
      '}',
    ),

    _sep: $ => choice(seq(',', repeat($._newline)), repeat1($._newline)),

    // BS-AA-001, 002, BS-LEX-024: keyword words are identifier keys by
    // context-aware lexing.
    associative_array_entry: $ => seq(
      field('key', choice($.identifier, $.string)),
      ':',
      field('value', $.expression),
    ),

    // ------------------------------------------------- error handling (§10)
    // BS-ERR-001-005: CATCH is required and takes one identifier.
    throw_statement: $ => seq(kw('throw'), field('value', $.expression)),

    // ----------------------------------------------------- functions (§8)
    // BS-FUNC-001-003, 005, 006: FUNCTION and SUB share the node; each closes
    // only with its own terminator (BS-STMT-036).
    function_declaration: $ => choice(
      seq(
        kw('function'),
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        optional(seq(kw('as'), field('return_type', $.type))),
        field('body', alias($._body, $.block)),
        choice(endKw('function'), kw('endfunction')),
      ),
      seq(
        kw('sub'),
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        field('body', alias($._body, $.block)),
        choice(endKw('sub'), kw('endsub')),
      ),
    ),

    // BS-FUNC-009-011.
    anonymous_function: $ => choice(
      seq(
        $._anonymous_function_header,
        field('body', alias($._body, $.block)),
        choice(endKw('function'), kw('endfunction')),
      ),
      seq(
        kw('sub'),
        field('parameters', $.parameter_list),
        field('body', alias($._body, $.block)),
        choice(endKw('sub'), kw('endsub')),
      ),
    ),

    // Headers of blocks that can stay open: one parse-stack entry each, which
    // bounds the end-of-input work on deeply nested unclosed blocks (S07-M01).
    _anonymous_function_header: $ => seq(
      kw('function'),
      field('parameters', $.parameter_list),
      optional(seq(kw('as'), field('return_type', $.type))),
    ),

    // A line break is allowed after a comma only (BS-FUNC-006).
    parameter_list: $ => seq(
      alias($.open_parenthesis, '('),
      optional(seq($.parameter, repeat(seq(',', repeat($._newline), $.parameter)))),
      ')',
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('default', $.expression))),
      optional(seq(kw('as'), field('type', $.type))),
    ),

    // BS-TYPE-001: one rule for parameter and return types.
    type: _ => choice(
      kw('integer'), kw('float'), kw('double'), kw('boolean'), kw('string'),
      kw('object'), kw('dynamic'), kw('function'), kw('void'),
    ),

    // --------------------------------------------------- literals (§3)
    // BS-LIT-003, 005-012: decimal (fraction, exponent `e`/`d`, suffix) and hex.
    // A digit run followed by `.` and a letter is `number` then `.` (BS-LIT-014).
    number: _ => token(choice(
      /(\d+(\.\d+)?|\.\d+)([eEdD][+-]?\d+)?[%!#&]?/,
      /&[hH][0-9a-fA-F]+&?/,
    )),

    // BS-LIT-015-017: one line; `""` is the only escape.
    string: _ => /"([^"\r\n]|"")*"/,

    // BS-LIT-001, 002, 019.
    invalid: _ => new RegExp(ci('invalid')),
    _error_token_forms: $ => seq($._raw_token_marker, choice(
      $.open_parenthesis, $.open_bracket, $.minus_sign, $.plus_sign, $.not_operator, $.try_keyword,
    )),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*[$%!#&]?/,
  },
});
